--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,23 +1,38 @@
 version: 0.0.{build}
-clone_folder: C:\projects\Mezz_Test
+clone_folder: C:\projects\Mezz_StaticFoundation
+
+image:
+- Visual Studio 2017
 
 environment:
   matrix:
   - GENERATOR: MinGW Makefiles
     CompilerPath: C:\msys64\mingw32\bin
-    TestPath: "."
+    CompilerMS: "0"
+    CompilerNix: "1"
+    Arch64: "0"
+    Arch32: "1"
   - GENERATOR: MinGW Makefiles
     CompilerPath: C:\msys64\mingw64\bin
-    TestPath: "."
+    CompilerMS: "0"
+    CompilerNix: "1"
+    Arch64: "1"
+    Arch32: "0"
 #  - GENERATOR: Visual Studio 14 2015
-#    TestPath: "./%configuration%"
-  - GENERATOR: Visual Studio 14 2015 Win64
-    TestPath: "./%configuration%"
+#    CompilerMS: "1"
+#    CompilerNix: "0"
+#    Arch64: "0"
+#    Arch32: "1"
+  - GENERATOR: Visual Studio 15 2017 Win64
+    CompilerMS: "1"
+    CompilerNix: "0"
+    Arch64: "1"
+    Arch32: "0"
 
 configuration:
   - Debug
   - Release
-
+  
 before_build:
   # Workaround for CMake not wanting sh.exe on PATH for MinGW
   - set PATH=%PATH:C:\Program Files\Git\bin;=%
@@ -36,15 +51,14 @@ before_build:
   - mkdir JagatiPackages
   - set JAGATI_DIR=C:\projects\Mezz_Test\build\JagatiPackages
   - echo "Current Configuration is '%CONFIGURATION%'"
-  - cmake -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% .. -DMEZZ_BuildDoxygen=OFF
+  - cmake -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% .. -DMEZZ_BuildDoxygen=OFF -DCMAKE_USE_OPENSSL=ON
 
 build_script:
   - cmake --build . --config %CONFIGURATION%
-
+  
 test_script:
-  - cmd: cd C:\projects\Mezz_Test\build
-  - cmd: cd %TestPath%
-  - cmd: Test_Tester
+  - cmd: cd C:\projects\Mezz_StaticFoundation\build
+  - cmd: StaticFoundation_Tester MEZZ_BuildDoxygen:0 MEZZ_Linux:0 MEZZ_BuildStaticLibraries:1 MEZZ_MacOSX:0 MEZZ_Windows:1 MEZZ_CompilerDesignNix:%CompilerNix% MEZZ_CompilerDesignMS:%CompilerMS% MEZZ_Arch64:%Arch64% MEZZ_Arch32:%Arch32%
 
 notifications:
 - provider: Email
@@ -53,4 +67,3 @@ notifications:
   on_build_success: false
   on_build_failure: true
   on_build_status_changed: true
-
