Attempting to add CI support for Jenkins

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,5 +84,5 @@ EmitTestCode()
 AddTestTarget()
 
 SetCodeCoverage()
-AddIDEVisibility("")
+AddIDEVisibility("Jenkinsfile")
 message(STATUS "${PROJECT_NAME} - Ending Configuration.")
