--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,16 @@ sudo: required
 dist: trusty
 language: cpp
 
-os:
-#  - linux
-  - osx
+matrix:
+  include:
+    #- os: linux
+    #  env: BUILD_TYPE="Debug"
+    #- os: linux
+    #  env: BUILD_TYPE="Release"
+    - os: osx
+      env: BUILD_TYPE="Debug"
+    - os: osx
+      env: BUILD_TYPE="Release"
 
 compiler:
   - clang
@@ -13,7 +20,7 @@ compiler:
 before_script:
   - mkdir build
   - cd build
-  - cmake -G"Ninja" .. -DMEZZ_BuildDoxygen=OFF -DMEZZ_CodeCoverage=ON
+  - cmake -G"Ninja" .. -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DMEZZ_BuildDoxygen=OFF -DMEZZ_CodeCoverage=ON
 
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]] ; then sudo apt-get install valgrind ninja-build ggcov -q -y; fi
