--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ language: cpp
 matrix:
   include:
     #- os: linux
-    #  env: BUILD_TYPE="Debug"
+    #  env: BUILD_TYPE=Debug
     #- os: linux
-    #  env: BUILD_TYPE="Release"
+    #  env: BUILD_TYPE=Release
     - os: osx
-      env: BUILD_TYPE="Debug"
+      env: BUILD_TYPE=Debug
     - os: osx
-      env: BUILD_TYPE="Release"
+      env: BUILD_TYPE=Release
 
 compiler:
   - clang
@@ -20,7 +20,7 @@ compiler:
 before_script:
   - mkdir build
   - cd build
-  - cmake -G"Ninja" .. -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DMEZZ_BuildDoxygen=OFF -DMEZZ_CodeCoverage=ON
+  - cmake -G"Ninja" .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DMEZZ_BuildDoxygen=OFF -DMEZZ_CodeCoverage=ON
 
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]] ; then sudo apt-get install valgrind ninja-build ggcov -q -y; fi
