--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,9 @@ before_script:
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]] ; then sudo apt-get install valgrind ninja-build ggcov -q -y; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]] ; then sudo ln -sf /usr/bin/gcov-4.8 /usr/bin/gcov; fi
+# The line below is the original line that started failing because of a brew issue with valgrind.  Ninja is still necessary.
 #  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]   ; then brew install valgrind ninja; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]   ; then brew install ninja; fi
 
 script:
   - ninja
