--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ message(STATUS "Determining Source Files.")
 
 AddHeaderFile("BitFieldTools.h")
 AddHeaderFile("ManagedArray.h")
+AddHeaderFile("SortedManagedArray.h")
 AddHeaderFile("StreamLogging.h")
 AddHeaderFile("Version.h")
 ShowList("Header Files:" "\t" "${FoundationHeaderFiles}")
@@ -91,6 +92,7 @@ CreateCoverageTarget(${FoundationLib} "${FoundationSourceFiles}")
 
 AddTestFile("BitFieldToolsTests.h")
 AddTestFile("ManagedArrayTests.h")
+AddTestFile("SortedManagedArrayTests.h")
 AddTestFile("StreamLoggingTests.h")
 EmitTestCode()
 AddTestTarget()
