A rough layout of the types that will be in the serialization code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,12 @@ IncludeJagatiPackage("Test")
 # Source files
 message(STATUS "Determining Source Files.")
 
+
+AddHeaderFile("BaseSerializationAttribute.h")
+AddHeaderFile("BaseSerializationBackEnd.h")
+AddHeaderFile("BaseSerializationNode.h")
+AddHeaderFile("BaseSerializationRootNode.h")
+
 AddHeaderFile("BitFieldTools.h")
 AddHeaderFile("ManagedArray.h")
 #AddHeaderFile("SerializationBackEnd.h")
@@ -94,6 +100,7 @@ CreateCoverageTarget(${FoundationLib} "${FoundationSourceFiles}")
 AddTestFile("BitFieldToolsTests.h")
 AddTestFile("ManagedArrayTests.h")
 AddTestFile("StreamLoggingTests.h")
+AddTestFile("SerializationTests.h")
 EmitTestCode()
 AddTestTarget()
 
