Initial commit for the ported FlatMap
Also fixed some doc typo's in BinaryFind.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ message(STATUS "Determining Source Files.")
 
 AddHeaderFile("BinaryFind.h")
 AddHeaderFile("BitFieldTools.h")
+AddHeaderFile("FlatMap.h")
 AddHeaderFile("ManagedArray.h")
 AddHeaderFile("SortedManagedArray.h")
 AddHeaderFile("StaticAny.h")
@@ -93,6 +94,7 @@ AddJagatiLibrary()
 CreateCoverageTarget(${FoundationLib} "${FoundationSourceFiles}")
 
 AddTestFile("BitFieldToolsTests.h")
+AddTestFile("FlatMapTests.h")
 AddTestFile("ManagedArrayTests.h")
 AddTestFile("SortedManagedArrayTests.h")
 AddTestFile("StaticAnyTests.h")
