--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ message(STATUS "Determining Source Files.")
 
 AddHeaderFile("BaseSerializationAttribute.h")
 AddHeaderFile("BaseSerializationBackEnd.h")
+AddHeaderFile("BaseSerializationInternalImplementation.h")
 AddHeaderFile("BaseSerializationNode.h")
 AddHeaderFile("BaseSerializationRootNode.h")
 AddHeaderFile("BinaryFind.h")
