--- a/.travis.yml
+++ b/.travis.yml
@@ -7,24 +7,24 @@ matrix:
     - os: osx
       compiler: clang
       env: BUILD_TYPE=Debug
-      env: CXX_FLAGS=-O0
+      env: CXX_FLAGS=-fno-var-tracking
     - os: osx
       compiler: gcc
       env: BUILD_TYPE=Debug
-      env: CXX_FLAGS=-O0
+      env: CXX_FLAGS=-fno-var-tracking
     - os: osx
       compiler: clang
       env: BUILD_TYPE=Release
-      env: CXX_FLAGS=
+      env: CXX_FLAGS=-fno-var-tracking
     - os: osx
       compiler: gcc
       env: BUILD_TYPE=Release
-      env: CXX_FLAGS=
+      env: CXX_FLAGS=-fno-var-tracking
 
 before_script:
   - mkdir build
   - cd build
-  - cmake -G"Ninja" .. -DCMAKE_BUILD_TYPE="$BUILD_TYPE" -DCMAKE_CXX_FLAGS="$CXX_FLAGS" -DMEZZ_BuildDoxygen=OFF -DMEZZ_CodeCoverage=ON
+  - cmake -G"Ninja" .. -DCMAKE_BUILD_TYPE="$BUILD_TYPE" -DMEZZ_BuildDoxygen=OFF -DMEZZ_CodeCoverage=ON
 
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]] ; then sudo apt-get install valgrind ninja-build ggcov -q -y; fi
