Split the SequenceModifier tests into their own file/testing class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,7 @@ CreateCoverageTarget(${FoundationLib} "${FoundationSourceFiles}")
 
 AddTestFile("BitFieldToolsTests.h")
 AddTestFile("FlatMapTests.h")
+AddTestFile("FlatMapSequenceTests.h")
 AddTestFile("ManagedArrayTests.h")
 AddTestFile("SortedManagedArrayTests.h")
 AddTestFile("StaticAnyTests.h")
