--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ AddHeaderFile("BaseSerializationNode.h")
 AddHeaderFile("BaseSerializationRootNode.h")
 AddHeaderFile("BinaryFind.h")
 AddHeaderFile("BitFieldTools.h")
+AddHeaderFile("FlatMap.h")
 AddHeaderFile("ManagedArray.h")
 AddHeaderFile("SortedManagedArray.h")
 AddHeaderFile("StaticAny.h")
@@ -98,6 +99,7 @@ AddJagatiLibrary()
 CreateCoverageTarget(${FoundationLib} "${FoundationSourceFiles}")
 
 AddTestFile("BitFieldToolsTests.h")
+AddTestFile("FlatMapTests.h")
 AddTestFile("ManagedArrayTests.h")
 AddTestFile("SerializationTests.h")
 AddTestFile("SortedManagedArrayTests.h")
