--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ AddHeaderFile("BitFieldTools.h")
 AddHeaderFile("FlatMap.h")
 AddHeaderFile("ManagedArray.h")
 AddHeaderFile("SortedManagedArray.h")
+AddHeaderFile("SortedVector.h")
 AddHeaderFile("StaticAny.h")
 AddHeaderFile("StreamLogging.h")
 AddHeaderFile("Version.h")
@@ -97,6 +98,7 @@ AddTestFile("BitFieldToolsTests.h")
 AddTestFile("FlatMapTests.h")
 AddTestFile("ManagedArrayTests.h")
 AddTestFile("SortedManagedArrayTests.h")
+AddTestFile("SortedVectorTests.h")
 AddTestFile("StaticAnyTests.h")
 AddTestFile("StreamLoggingTests.h")
 EmitTestCode()
