--- a/.gitignore
+++ b/.gitignore
@@ -40,9 +40,9 @@ CMakeLists.txt.user*
 *.so
 *.so.*
 
-# Mac OS X spotlight
+# OS file explorers
 .DS_Store
-
+.directory
 
 # Ignore libincludes mercurial files
 .hg*
