--- a/.travis.yml
+++ b/.travis.yml
@@ -24,23 +24,15 @@ matrix:
 before_script:
   - mkdir build
   - cd build
-  - cmake -G"Ninja" .. -DCMAKE_BUILD_TYPE="$BUILD_TYPE" -DMEZZ_BuildDoxygen=OFF -DMEZZ_CodeCoverage=ON
-
-install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] ; then sudo apt-get install valgrind ninja-build ggcov -q -y; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] ; then sudo ln -sf /usr/bin/gcov-4.8 /usr/bin/gcov; fi
-# The line below is the original line that started failing because of a brew issue with valgrind.  Ninja is still necessary.
-#  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]   ; then brew install valgrind ninja; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]   ; then brew install ninja; fi
+  - cmake -E env CXXFLAGS="-fno-var-tracking" cmake -G"Xcode" .. -DCMAKE_BUILD_TYPE="$BUILD_TYPE" -DCMAKE_CXX_FLAGS="$CXX_FLAGS" -DMEZZ_BuildDoxygen=OFF -DMEZZ_CodeCoverage=ON
+  - cmake -E env CXXFLAGS="-fno-var-tracking" cmake -G"Xcode" .. -DCMAKE_BUILD_TYPE="$BUILD_TYPE" -DCMAKE_CXX_FLAGS="$CXX_FLAGS" -DMEZZ_BuildDoxygen=OFF -DMEZZ_CodeCoverage=ON
 
 script:
-  - ninja
+  - cmake --build .
   - ./Foundation_Tester
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] ; then valgrind --tool=memcheck --leak-check=full --error-exitcode=1 ./Foundation_Tester; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] ; then valgrind --tool=memcheck --leak-check=full --error-exitcode=1 ./Foundation_Tester Debug All; fi
 
 after_success:
-  - ninja TestCoverage
+  - cmake --build . --target TestCoverage
   - bash <(curl -s https://codecov.io/bash)
 
 notifications:
