Added simple class and functions for handling command like args

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ AddHeaderFile("Base64.h")
 AddHeaderFile("BinaryBuffer.h")
 AddHeaderFile("BinaryFind.h")
 AddHeaderFile("BitFieldTools.h")
+AddHeaderFile("CommandLine.h")
 AddHeaderFile("FlatMap.h")
 AddHeaderFile("ManagedArray.h")
 AddHeaderFile("SortedManagedArray.h")
@@ -87,6 +88,7 @@ ShowList("Header Files:" "\t" "${FoundationHeaderFiles}")
 
 AddSourceFile("Base64.cpp")
 AddSourceFile("BinaryBuffer.cpp")
+AddSourceFile("CommandLine.cpp")
 AddSourceFile("StreamLogging.cpp")
 ShowList("Source Files:" "\t" "${FoundationSourceFiles}")
 
@@ -101,6 +103,7 @@ CreateCoverageTarget(${FoundationLib} "${FoundationSourceFiles}")
 AddTestFile("Base64Tests.h")
 AddTestFile("BinaryBufferTests.h")
 AddTestFile("BitFieldToolsTests.h")
+AddTestFile("CommandLineTests.h")
 AddTestFile("FlatMapTests.h")
 AddTestFile("ManagedArrayTests.h")
 AddTestFile("SortedManagedArrayTests.h")
