Updated and cleaned CountedPtr and tests.
Updated and cleaned CountedPtr and tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ message(STATUS "Determining Source Files.")
 
 AddHeaderFile("BinaryFind.h")
 AddHeaderFile("BitFieldTools.h")
+AddHeaderFile("CountedPtr.h")
 AddHeaderFile("FlatMap.h")
 AddHeaderFile("ManagedArray.h")
 AddHeaderFile("SortedManagedArray.h")
@@ -95,6 +96,7 @@ AddJagatiLibrary()
 CreateCoverageTarget(${FoundationLib} "${FoundationSourceFiles}")
 
 AddTestFile("BitFieldToolsTests.h")
+AddTestFile("CountedPtrTests.h")
 AddTestFile("FlatMapTests.h")
 AddTestFile("ManagedArrayTests.h")
 AddTestFile("SortedManagedArrayTests.h")
