Commiting progress so far.
Initial implementation of Introspection and most of the tests are complete.  Some functionality is still pending, as well as the manual.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ AddHeaderFile("BinaryBuffer.h")
 AddHeaderFile("BinaryFind.h")
 AddHeaderFile("BitFieldTools.h")
 AddHeaderFile("FlatMap.h")
+AddHeaderFile("Introspection.h")
 AddHeaderFile("ManagedArray.h")
 AddHeaderFile("SortedManagedArray.h")
 AddHeaderFile("SortedVector.h")
@@ -102,6 +103,7 @@ AddTestFile("Base64Tests.h")
 AddTestFile("BinaryBufferTests.h")
 AddTestFile("BitFieldToolsTests.h")
 AddTestFile("FlatMapTests.h")
+AddTestFile("IntrospectionTests.h")
 AddTestFile("ManagedArrayTests.h")
 AddTestFile("SortedManagedArrayTests.h")
 AddTestFile("SortedVectorTests.h")
