--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ AddHeaderFile("SortedManagedArray.h")
 AddHeaderFile("SortedVector.h")
 AddHeaderFile("StaticAny.h")
 AddHeaderFile("StreamLogging.h")
+AddHeaderFile("TupleTools.h")
 AddHeaderFile("Version.h")
 ShowList("Header Files:" "\t" "${FoundationHeaderFiles}")
 
@@ -109,6 +110,7 @@ AddTestFile("SortedManagedArrayTests.h")
 AddTestFile("SortedVectorTests.h")
 AddTestFile("StaticAnyTests.h")
 AddTestFile("StreamLoggingTests.h")
+AddTestFile("TupleToolsTests.h")
 EmitTestCode()
 AddTestTarget()
 
