--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,7 @@ AddHeaderFile("SortedManagedArray.h")
 AddHeaderFile("SortedVector.h")
 AddHeaderFile("StaticAny.h")
 AddHeaderFile("StreamLogging.h")
+AddHeaderFile("StringTools.h")
 AddHeaderFile("TupleTools.h")
 AddHeaderFile("Version.h")
 ShowList("Header Files:" "\t" "${FoundationHeaderFiles}")
@@ -93,6 +94,7 @@ AddSourceFile("Base64.cpp")
 AddSourceFile("BinaryBuffer.cpp")
 AddSourceFile("CommandLine.cpp")
 AddSourceFile("StreamLogging.cpp")
+AddSourceFile("StringTools.cpp")
 ShowList("Source Files:" "\t" "${FoundationSourceFiles}")
 
 #AddJagatiDoxInput("Dox.h") # Little d
@@ -116,6 +118,7 @@ AddTestFile("SortedManagedArrayTests.h")
 AddTestFile("SortedVectorTests.h")
 AddTestFile("StaticAnyTests.h")
 AddTestFile("StreamLoggingTests.h")
+AddTestFile("StringToolsTests.h")
 AddTestFile("TupleToolsTests.h")
 EmitTestCode()
 AddTestTarget()
