Partial commit of MurmurHash.  Tests are still pending.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,7 @@ AddHeaderFile("CommandLine.h")
 AddHeaderFile("FlatMap.h")
 AddHeaderFile("Introspection.h")
 AddHeaderFile("ManagedArray.h")
+AddHeaderFile("MurmurHash.h")
 AddHeaderFile("SortedManagedArray.h")
 AddHeaderFile("SortedVector.h")
 AddHeaderFile("StaticAny.h")
@@ -93,6 +94,7 @@ ShowList("Header Files:" "\t" "${FoundationHeaderFiles}")
 AddSourceFile("Base64.cpp")
 AddSourceFile("BinaryBuffer.cpp")
 AddSourceFile("CommandLine.cpp")
+AddSourceFile("MurmurHash.cpp")
 AddSourceFile("StreamLogging.cpp")
 AddSourceFile("StringTools.cpp")
 ShowList("Source Files:" "\t" "${FoundationSourceFiles}")
@@ -114,6 +116,7 @@ AddTestFile("CommandLineTests.h")
 AddTestFile("FlatMapTests.h")
 AddTestFile("IntrospectionTests.h")
 AddTestFile("ManagedArrayTests.h")
+AddTestFile("MurmurHashTests.h")
 AddTestFile("SortedManagedArrayTests.h")
 AddTestFile("SortedVectorTests.h")
 AddTestFile("StaticAnyTests.h")
