Initial commit for serialization frontend.  Nothing is being committed to yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,7 @@ AddHeaderFile("CommandLine.h")
 AddHeaderFile("FlatMap.h")
 AddHeaderFile("Introspection.h")
 AddHeaderFile("ManagedArray.h")
+AddHeaderFile("Serialization.h")
 AddHeaderFile("SortedManagedArray.h")
 AddHeaderFile("SortedVector.h")
 AddHeaderFile("StaticAny.h")
