This is a rough draft using the new Jagati exceptions feature.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,7 @@ AddTestFile("BitFieldToolsTests.h")
 AddTestFile("CountedPtrBenchmarks.h")
 AddTestFile("CountedPtrTests.h")
 AddTestFile("CommandLineTests.h")
+AddTestFile("ExceptionTests.h")
 AddTestFile("FlatMapTests.h")
 AddTestFile("IntrospectionTests.h")
 AddTestFile("ManagedArrayTests.h")
@@ -122,6 +123,9 @@ AddTestFile("StringToolsTests.h")
 AddTestFile("TupleToolsTests.h")
 EmitTestCode()
 AddTestTarget()
+
+AddJagatiException("InputOutPut" "Base" "Base Exception for all IO")
+EmitExceptionHeader()
 
 SetCodeCoverage()
 AddIDEVisibility("Jenkinsfile")
