A very WIP version of the serialization frontend being concepted.
Pushing now to access from a different station.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,7 @@ AddTestFile("FlatMapTests.h")
 AddTestFile("IntrospectionTests.h")
 AddTestFile("ManagedArrayTests.h")
 AddTestFile("MurmurHashTests.h")
+AddTestFile("SerializationTests.h")
 AddTestFile("SortedManagedArrayTests.h")
 AddTestFile("SortedVectorTests.h")
 AddTestFile("StaticAnyTests.h")
