--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,8 +144,9 @@ AddHeaderFile("Base64.h")
 AddHeaderFile("BinaryBuffer.h")
 AddHeaderFile("BinaryFind.h")
 AddHeaderFile("BitFieldTools.h")
-AddHeaderFile("CountedPtr.h")
 AddHeaderFile("CommandLine.h")
+AddHeaderFile("ContainerTools.h")
+AddHeaderFile("CountedPtr.h")
 AddHeaderFile("FlatMap.h")
 AddHeaderFile("Introspection.h")
 AddHeaderFile("ManagedArray.h")
@@ -179,6 +180,7 @@ CreateCoverageTarget(${FoundationLib} "${FoundationSourceFiles}")
 AddTestFile("Base64Tests.h")
 AddTestFile("BinaryBufferTests.h")
 AddTestFile("BitFieldToolsTests.h")
+AddTestFile("ContainerToolsTests.h")
 AddTestFile("CountedPtrBenchmarks.h")
 AddTestFile("CountedPtrTests.h")
 AddTestFile("CommandLineTests.h")
